[workspace]
resolver = "2"

members = [
    "template_game",
    "template_lib",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Make the binary small for release builds
[profile.release]
lto = "thin"
opt-level = "z"