[package]
name = "bug_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bug_lib = { path = "../bug_lib", version = "0.1.0"}
bevy = "0.12.1"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
